two-third completed

--- a/index.html
+++ b/index.html
@@ -1,12 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resolution 2022</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Stay Focused</h1>
+    <section class="top-banner flexible-container">
+        <div class="half-width stay-focused">
+            <div class="bar">
+                <h1 class="top-heading heading-light-black">Stay Focused on</h1>
+                <h1 class="top-heading heading-orange">Mission 2022</h1>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dignissimos quo laboriosam neque
+                asperiores rerum exercitationem quis quibusdam? Eligendi, accusamus.</p>
+            <br>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">Explore Now</a>
+            <br>
+            <br>
+            <p class="smaller">Scroll down to explore more about us</p>
+        </div>
+        <div class="half-width">
+            <img src="images/person-2.png" alt="">
+        </div>
+    </section>
+    <section class="mission-area">
+        <h2 id="second-heading" class="heading" class="heading-blue">My Mission in <span
+                class="heading-orange">2022</span></h2>
+        <div class="flexible-container">
+            <div class="mission-item" id="mission-blue">
+                <img src="images/illustrator-1.png" alt="">
+                <h3 class="heading">Mission</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus illum autem eum repellat
+                    blanditiis vitae, natus expedita optio aperiam sequi?</p>
+            </div>
+            <div class="mission-item" id="mission-red">
+                <img src="images/illustrator-2.png" alt="">
+                <h3 class="heading">Vission</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus illum autem eum repellat
+                    blanditiis vitae, natus expedita optio aperiam sequi?</p>
+            </div>
+            <div class="mission-item" id="mission-yellow">
+                <img src="images/illustrator-3.png" alt="">
+                <h3 class="heading">Goals</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus illum autem eum repellat
+                    blanditiis vitae, natus expedita optio aperiam sequi?</p>
+            </div>
+        </div>
+    </section>
+    <section class="dev-area flexible-container">
+        <img src="images/coding.png" alt="">
+        <div class="limit">
+            <h2>Develop</h2>
+            <h2>Without Limits</h2>
+            <br>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, cum fuga odio laborum aut deserunt minima eum laboriosam reiciendis, illo dignissimos earum repudiandae consectetur facilis rerum corrupti ab nam! Voluptas, aut repellat minus magnam temporibus sequi libero?</p>
+            <br>
+            <br>
+            <a class="link-button" href="">Read the Documentation</a>
+        </div>
+    </section>
 </body>
+
 </html>
