--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
             <a class="link-button" href="">Read the Documentation</a>
         </div>
     </section>
+    <section class="community-area flexible-container">
+        <div class="know">
+            <h2>Know our</h2>
+            <h2>Global Community</h2>
+            <br>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, cum fuga odio laborum aut deserunt minima eum laboriosam reiciendis, illo dignissimos earum repudiandae consectetur facilis rerum corrupti ab nam! Voluptas, aut repellat minus magnam temporibus sequi libero?</p>
+            <br>
+            <br>
+            <a class="link-button" href="">Read the Documentation</a>
+        </div>
+        <img src="images/project.png" alt="">
+    </section>
 </body>
 
 </html>
